--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
       <select id='selector'></select>
     </div> <!-- row -->
 
-    <div class="row2 bookShelf">
+    <div class="bookShelf">
       <div id="coverflow">
       </div> <!-- coverflow -->
     </div> <!-- bookShelf -->
     
   </div> <!-- container -->
+
+
+
+<section class="container2">
+  <div id="card">
+    <figure class="front">1</figure>
+    <figure class="back">
+      <h1>Book Bestseller List</h1>
+    </figure>
+  </div>
+</section>
+
+
 
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
