--- a/index.html
+++ b/index.html
@@ -21,10 +21,46 @@
     
   </div> <!-- container -->
 
-
+<div class="bigbox">
 
 <section class="container2">
-  <div id="card">
+  <div id="card0">
+    <figure class="front">1</figure>
+    <figure class="back">
+      <h1>Book Bestseller List</h1>
+    </figure>
+  </div>
+</section>
+
+<section class="container2">
+  <div id="card1">
+    <figure class="front">1</figure>
+    <figure class="back">
+      <h1>Book Bestseller List</h1>
+    </figure>
+  </div>
+</section>
+
+<section class="container2">
+  <div id="card2">
+    <figure class="front">1</figure>
+    <figure class="back">
+      <h1>Book Bestseller List</h1>
+    </figure>
+  </div>
+</section>
+
+<section class="container2">
+  <div id="card3">
+    <figure class="front">1</figure>
+    <figure class="back">
+      <h1>Book Bestseller List</h1>
+    </figure>
+  </div>
+</section>
+
+<section class="container2">
+  <div id="card4">
     <figure class="front">1</figure>
     <figure class="back">
       <h1>Book Bestseller List</h1>
@@ -33,7 +69,7 @@
 </section>
 
 
-
+</div>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
