--- a/index.html
+++ b/index.html
@@ -6,126 +6,163 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   <title>Document</title>
 </head>
 <body>
   
   <header>
     <div class="cover-box"></div>
-    <div class="cover-title"></div>
+    <!-- <div class="cover-title"></div> -->
   </header>
 
   <div class="col-md-8 col-md-offset-2">
     <div class="contentBox1 text-center">
-      <i class="fa fa-angle-double-down fa-4x"></i>
+      <a href="#page2"><i class="fa fa-angle-double-down fa-4x"></i></a>
     </div>  
   </div>
 
 
   <div class="col-md-12 text-center bigbox">
+
     <div class="row">
-      <div class="contentBox2 text-center">
-        <h1 class="categoryTitle"></h1>
+      <div class="contentBox2 ">
+        <h1 class="categoryTitle" id="page2"></h1>
+        <div id="nav">
+          <ul class="nav nav-pills text-left">
+            <li role="presentation" class="active"><a href="#my_collection">My Collection</a></li>
+            <li role="presentation"><select id='selector' class='text-left'></select></li>
+          </ul>
+        </div>
       </div>  
+    </div>
+  
+    
+
+    <div class="row text-center">
+      <section class="container2">
+        <div id="card0">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card1">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card2">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card3">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card4">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card5">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card6">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card7">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card8">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card9">
+          <figure class="front"></figure>
+          <figure class="back">
+          </figure>
+        </div>
+      </section>
+  </div> <!-- row -->
+  
+  <div id="my_collection">
+    <div id="collection_title">My Collection</div>
+    <div class="collection_container">
+
+      <section class="container2">
+        <div id="card10">
+          <figure class="front">
+            <img src="http://du.ec2.nytimes.com.s3.amazonaws.com/prd/books/9781250077004.jpg">
+          </figure>
+          <figure class="back">
+            <h3>FURIOUSLY HAPPY</h3>
+            <h4>Jenny Lawson</h4>
+            <p>A humorous treatment of the author's life with depression and anxiety disorder.</p>
+          </figure>
+        </div>
+      </section>
+
+      <section class="container2">
+        <div id="card11">
+          <figure class="front"><img src="http://du.ec2.nytimes.com.s3.amazonaws.com/prd/books/9780544387669.jpg"></figure>
+          <figure class="back">
+            <h3>THE BLACK PRESIDENCY</h3>
+            <h4>Michael Eric Dyson</h4>
+            <p>Barack Obama and the politics of race in America.</p>
+          </figure>
+        </div>
+      </section>
+
     </div>
   </div>
 
-  <div class="row">
-    <section class="container2">
-      <div id="card0">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card1">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card2">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card3">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card4">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card5">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card6">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card7">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card8">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <section class="container2">
-      <div id="card9">
-        <figure class="front"></figure>
-        <figure class="back">
-        </figure>
-      </div>
-    </section>
-
-    <div class="container">      
-      <select id='selector'></select>
-    </div> 
-  </div> <!-- row -->
-  
 
 <footer>
-  <div>
+  <div class='room'>
     
   </div>
 </footer>
 
-<!-- </div> -->
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
 </html>
